--- a/home/.alacritty.yml
+++ b/home/.alacritty.yml
@@ -92,7 +92,7 @@ font:
     # The `style` can be specified to pick a specific face.
     #style: Regular
 
-    family: 'Ubuntu Mono Nerd Font'
+    family: 'monospace'
     style: Regular
 
   # Bold font face
@@ -106,7 +106,7 @@ font:
     # The `style` can be specified to pick a specific face.
     #style: Bold
 
-    family: 'Ubuntu Mono Nerd Font'
+    family: 'monospace'
     style: Bold
 
   # Italic font face
@@ -120,11 +120,11 @@ font:
     # The `style` can be specified to pick a specific face.
     #style: Italic
 
-    family: 'Ubuntu Mono Nerd Font'
+    family: 'monospace'
     style: Italic
 
   # Point size
-  size: 11
+  size: 10
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
