--- a/home/.alacritty.yml
+++ b/home/.alacritty.yml
@@ -159,11 +159,11 @@ font:
 # draw_bold_text_with_bright_colors: true
 
 # Colors (Tomorrow Night Bright)
-# colors:
-#   # Default colors
-#   primary:
-#     background: '0x000000'
-#     foreground: '0xeaeaea'
+colors:
+  # Default colors
+  primary:
+    background: '0x000000'
+    foreground: '0xeaeaea'
 
     # Bright and dim foreground colors
     #
